<resources>
    <string name="app_name">Android Abschluss</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipe">Recipe</string>
    <string name="coctail">Cocktail</string>
    <string name="favorite">Favorite</string>
    <string name="note">Note</string>
    <string name="my_favourites_meals" />
    <string name="add_notes">Add Notes\n</string>
    <string name="your_notes">Your Notes\n</string>
    <string name="save">Save\n</string>
    <string name="show_all_my_notes">Show All My Notes</string>
    <string name="my_notes">My Notes</string>
    <string name="notes">Note</string>
    <string name="suchen">Search</string>
    <string name="settings">Settings</string>
    <string name="asistent_enter_your_recipe">enter your recipe</string>
    <string name="assistent_message">How can I help you with recipes? Don\'t hesitate to ask!</string>
    <string name="asistent_recipes_generator_überschrift">Recipes Generator</string>
    <string name="details_category">category</string>
    <string name="details_tags">tags</string>
    <string name="details_ingredient">Ingredient</string>
    <string name="details_measure">Measure</string>
    <string name="details_instructions">Instructions</string>
    <string name="search_button">Search</string>
    <string name="recipes_generator_button">Recipes Generator</string>
    <string name="my_favourites_cocktails_überschrift">My Favourites Cocktails</string>
    <string name="my_favourites_meals_überschrift">My Favourites Meals</string>
    <string name="e_mail_text">E-mail</string>
    <string name="password_text">Password</string>
    <string name="login_button">Login</string>
    <string name="sign_up_button">sign up</string>
    <string name="notes_überschrift">Notes</string>
    <string name="save_button">save</string>
    <string name="cancel_button">cancel</string>
    <string name="start_typing_text">Start Typing</string>
    <string name="your_notes_überschrift">Your Notes</string>
    <string name="delete_button">delete</string>
    <string name="edit_typing_text">Edit Typing</string>
    <string name="details_area">area</string>
    <string name="logout_button">Logout</string>
    <string name="new_user_text">_New User_</string>
    <string name="produkt_text">produkt text</string>
    <string name="produkt_name_text">produkt name</string>
    <string name="note_title_überschrift_card">Title</string>
    <string name="note_texte_text">Texte</string>
    <string name="send_button">Send</string>
    <string name="select_theme">Select Theme</string>
    <string name="light_theme">Light Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="submit">SUBMIT</string>
    <string name="device_theme">Device Theme</string>

    <string-array name="titel_array">
        <item>Title</item>
        <item>Recipe</item>
        <item>Shopping</item>
        <item>Reminder</item>
        <item>Attention</item>
    </string-array>

</resources>