<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/recipeListFragment"
        android:icon="@drawable/recipe_icon"
        android:title="@string/recipe"
        android:iconTint="@color/background_color"/>

    <item
        android:id="@+id/cocktailRecipesFragment"
        android:icon="@drawable/cocktail_icon"
        android:title="@string/coctail"
        android:iconTint="@color/background_color"/>

    <item
        android:id="@+id/favoritesFragment"
        android:icon="@drawable/favorite_icon"
        android:title="@string/favorite"
        android:iconTint="@color/background_color"/>

    <item
        android:id="@+id/noteAddFragment"
        android:icon="@drawable/note_icon"
        android:title="@string/note"
        android:iconTint="@color/background_color"/>

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/settings_icon"
        android:title="@string/settings"
        android:iconTint="@color/background_color"/>




</menu>