<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgbildauth"
    android:alpha="0.9"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.SettingsFragment">

    <TextView
        android:id="@+id/settings_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Settings"
        android:textColor="@color/colorPrimary3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/logout_button"
        android:layout_width="268dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="172dp"
        android:backgroundTint="@color/colorSecondary2"
        android:text="@string/logout_button"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.582"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/select_theme"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" >

        <RadioButton
            android:id="@+id/btnRadioLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/light_theme"
            android:textColor="@color/colorPrimary5"
            android:textSize="16sp"/>

        <RadioButton
            android:id="@+id/btnRadioDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dark_theme"
            android:textColor="@color/colorPrimary5"
            android:textSize="16sp"/>

        <RadioButton
            android:id="@+id/btnRadioDevice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Device Theme"
            android:textColor="@color/colorPrimary5"
            android:textSize="16sp"/>
    </RadioGroup>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:backgroundTint="@color/colorPrimary"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>