<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cocktail_recipes_hintergrund"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgbildauth"
    tools:context=".ui.CocktailRecipesFragment">


    <EditText
        android:id="@+id/cocktailListEditTextSearch"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="13dp"
        android:autofillHints="One Piece"
        android:background="@drawable/search_edit_text_background"
        android:hint="@string/suchen"
        android:imeOptions="actionSearch"
        android:inputType="textCapWords"
        android:paddingStart="20dp"
        android:paddingTop="8dp"
        android:paddingEnd="20dp"
        android:paddingBottom="8dp"
        android:textColor="@color/colorPrimary3"
        android:textColorHint="@color/colorPrimary3"
        android:textSize="22sp"
        app:layout_constraintEnd_toStartOf="@+id/cocktailListSearchButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cocktailListSearchButton"
        android:layout_width="102dp"
        android:layout_height="54dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/colorPrimary1.2"
        android:text="@string/search_button"
        android:textColor="@color/colorPrimary3.2"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cocktailsRV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="122dp"
        android:padding="10dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cocktailListSearchButton"
        app:spanCount="2"
        tools:listitem="@layout/item_cocktail" />

    <Button
        android:id="@+id/assistant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="162dp"
        android:backgroundTint="@color/colorPrimary2"
        android:text="@string/recipes_generator_button"
        android:textColor="@color/colorPrimary5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cocktailListEditTextSearch" />

</androidx.constraintlayout.widget.ConstraintLayout>